// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ThreeStateCheckBox matches snapshot when value is 'all' 1`] = `
<DocumentFragment>
  <input
    aria-label="Test Checkbox"
    checked=""
    class="three-state-checkbox test-class"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`ThreeStateCheckBox matches snapshot when value is 'none' 1`] = `
<DocumentFragment>
  <input
    aria-label="Test Checkbox"
    class="three-state-checkbox test-class"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`ThreeStateCheckBox matches snapshot when value is 'some' 1`] = `
<DocumentFragment>
  <input
    aria-label="Test Checkbox"
    checked=""
    class="three-state-checkbox test-class"
    type="checkbox"
  />
</DocumentFragment>
`;
